--- a/styles/cards.module.css
+++ b/styles/cards.module.css
@@ -45,7 +45,7 @@
     }
 
     .card {
-        width: auto;
+        width: 100%;
         height: auto;
         margin: 10px;
         background-color: #F8FBFE;
